[web] don't let the page become overly wide - improves readability

--- a/trunk/JLanguageTool/website/www/css/style.css
+++ b/trunk/JLanguageTool/website/www/css/style.css
@@ -9,6 +9,7 @@ Use it however you want, just leave the links in the footer :)
 */
 body {
 	background: url(../images/bg.jpg) no-repeat;
+	max-width: 1200px;
 }
 
 a:link {
