start a language-specific page for German - note that this is not a translation of the homepage but a completely new page

--- a/trunk/JLanguageTool/website/www/css/style.css
+++ b/trunk/JLanguageTool/website/www/css/style.css
@@ -100,6 +100,17 @@ pre {
 	background-color: #7ef7ac;
 }
 
+/* copied from community website */
+.errorMarker {
+.	font-weight: bold;
+	padding-left: 3px;
+	padding-right: 3px;
+	padding-bottom:2px;
+	background-image:url("../images/squiggle.png");
+	background-repeat:repeat-x;
+	background-position:left bottom;        
+	vertical-align:text-top;
+}
 /* ------------------------------------------------- */
 
 /* Link and heading "LanguageTool" in the upper left corner: */
