improve button layout, thanks to Nathan Wells

--- a/trunk/JLanguageTool/website/www/css/style.css
+++ b/trunk/JLanguageTool/website/www/css/style.css
@@ -204,3 +204,28 @@ pre {
 li {
     margin-top: 5px;
 }
+
+/* check form on the homepage */
+BODY TABLE TBODY TR TD.content FORM SELECT#lang:HOVER {
+    background-color: #EF8701;
+    color: #FFFFFF;
+    border: 2px solid #464646;
+}
+BODY TABLE TBODY TR TD.content FORM SELECT#lang {
+    background-color: #F9F5F2;
+    color: #464646;
+    border: 2px solid #464646;
+    font-weight: bold;
+}
+TABLE TBODY TR TD.content FORM INPUT:HOVER {
+    background-color: #EF8701;
+    border: 2px solid #464646;
+    color: #FFFFFF;
+}
+TABLE TBODY TR TD.content FORM INPUT {
+    background-color: #FBF7F4;
+    border: 2px solid #464646;
+    color: #464646;
+    font-weight: bold;
+}
+/* end: check form on the homepage */
