adapt textarea style to the buttons

--- a/trunk/JLanguageTool/website/www/css/style.css
+++ b/trunk/JLanguageTool/website/www/css/style.css
@@ -228,4 +228,8 @@ TABLE TBODY TR TD.content FORM INPUT {
     color: #464646;
     font-weight: bold;
 }
+TABLE TBODY TR TD.content FORM TEXTAREA {
+    background-color: #EEEEEE;
+    border: 1px solid #464646;
+}
 /* end: check form on the homepage */
