[da] many new Danish rules, a disambiguator, and a new dictionary by Henrik Bendt

--- a/trunk/JLanguageTool/src/rules/false-friends.css
+++ b/trunk/JLanguageTool/src/rules/false-friends.css
@@ -6,7 +6,7 @@ rulegroup, rulegroup.rule, rules, pattern {
 
 pattern:before {
 	content: list(attribute, lang,
-		values, "en\A de\A fr\A es\A pl\A sv\A gl",
+		values, "en\A de\A fr\A es\A pl\A sv\A gl\A da\A nl",
 		rows, 1,
 		selection, single)
 	insert-button()
@@ -15,7 +15,7 @@ pattern:before {
 
 translation:before {
 	content: list(attribute, lang,
-		values, "en\A de\A fr\A es\A pl\A sv\A gl",
+		values, "en\A de\A fr\A es\A pl\A sv\A gl\A da\A nl",
 		rows, 1,
 		selection, single)
 	insert-after-button()
