CSS gradient syntax (unprefixed) changed

--- a/trunk/JLanguageTool/src/main/dev/tools/ltdiff/ltdiff.css
+++ b/trunk/JLanguageTool/src/main/dev/tools/ltdiff/ltdiff.css
@@ -39,7 +39,7 @@ span {
   background-image: -moz-linear-gradient(left, #f0ffe1, rgba(240, 255, 225, 0));
   background-image: -o-linear-gradient(left, #f0ffe1, rgba(240, 255, 225, 0));
   background-image: -ms-linear-gradient(left, #f0ffe1, rgba(240, 255, 225, 0));
-  background-image: linear-gradient(left, #f0ffe1, rgba(240, 255, 225, 0));
+  background-image: linear-gradient(to right, #f0ffe1, rgba(240, 255, 225, 0));
 }
 
 .new > td:first-child {
@@ -47,7 +47,7 @@ span {
   background-image: -moz-linear-gradient(left, #5ba622, #f0ffe1);
   background-image: -o-linear-gradient(left, #5ba622, #f0ffe1);
   background-image: -ms-linear-gradient(left, #5ba622, #f0ffe1);
-  background-image: linear-gradient(left, #5ba622, #f0ffe1);
+  background-image: linear-gradient(to right, #5ba622, #f0ffe1);
 }
 
 td:last-child > div {
@@ -78,7 +78,7 @@ td:last-child:hover > div {
   background-image: -moz-linear-gradient(left, #ffc8c8, rgba(255, 200, 200, 0));
   background-image: -o-linear-gradient(left, #ffc8c8, rgba(255, 200, 200, 0));
   background-image: -ms-linear-gradient(left, #ffc8c8, rgba(255, 200, 200, 0));
-  background-image: linear-gradient(left, #ffc8c8, rgba(255, 200, 200, 0));
+  background-image: linear-gradient(to right, #ffc8c8, rgba(255, 200, 200, 0));
 }
 
 .removed > td:first-child {
@@ -86,7 +86,7 @@ td:last-child:hover > div {
   background-image: -moz-linear-gradient(left, #ca0000, #ffc8c8);
   background-image: -o-linear-gradient(left, #ca0000, #ffc8c8);
   background-image: -ms-linear-gradient(left, #ca0000, #ffc8c8);
-  background-image: linear-gradient(left, #ca0000, #ffc8c8);
+  background-image: linear-gradient(to right, #ca0000, #ffc8c8);
 }
 
 .modified > td {
@@ -94,7 +94,7 @@ td:last-child:hover > div {
   background-image: -moz-linear-gradient(left, #ffedcf, rgba(255, 237, 207, 0));
   background-image: -o-linear-gradient(left, #ffedcf, rgba(255, 237, 207, 0));
   background-image: -ms-linear-gradient(left, #ffedcf, rgba(255, 237, 207, 0));
-  background-image: linear-gradient(left, #ffedcf, rgba(255, 237, 207, 0));
+  background-image: linear-gradient(to right, #ffedcf, rgba(255, 237, 207, 0));
 }
 
 .modified > td:first-child {
@@ -102,7 +102,7 @@ td:last-child:hover > div {
   background-image: -moz-linear-gradient(left, #ffa300, #ffedcf);
   background-image: -o-linear-gradient(left, #ffa300, #ffedcf);
   background-image: -ms-linear-gradient(left, #ffa300, #ffedcf);
-  background-image: linear-gradient(left, #ffa300, #ffedcf);
+  background-image: linear-gradient(to right, #ffa300, #ffedcf);
 }
 
 .lang > td {
@@ -118,7 +118,7 @@ td:last-child:hover > div {
   background-image: -moz-linear-gradient(left, rgba(0, 0, 0, .4), rgba(0, 0, 0, 0));
   background-image: -o-linear-gradient(left, rgba(0, 0, 0, .4), rgba(0, 0, 0, 0));
   background-image: -ms-linear-gradient(left, rgba(0, 0, 0, .4), rgba(0, 0, 0, 0));
-  background-image: linear-gradient(left, rgba(0, 0, 0, .4), rgba(0, 0, 0, 0));
+  background-image: linear-gradient(to right, rgba(0, 0, 0, .4), rgba(0, 0, 0, 0));
 }
 
 .gray {
